--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-countries-api",
-  "homepage": "https://github.com/aleksFedotov.github.io/rest-countries-api/",
+  "homepage": "https://aleksFedotov.github.io/rest-countries-api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
